--- a/package.json
+++ b/package.json
@@ -1,30 +1,43 @@
 {
   "name": "@skyshots/react-text-scrambler",
-  "version": "1.1.6",
-  "description": "A React component and utility for animated text scrambling",
+  "version": "1.1.8",
+  "description": "A lightweight React component for animated text scrambling effects.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "clean": "rm -rf dist",
+    "types": "tsc --emitDeclarationOnly",
+    "prepare": "npm run build"  
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/skyshots/react-text-scrambler.git"
   },
   "keywords": [
     "react",
     "text",
     "scramble",
     "animation",
-    "hook",
-    "utility"
+    "component",
+    "typescript"
   ],
   "author": "Sky",
   "license": "MIT",
   "peerDependencies": {
-    "react": "^17.0.0 || ^18.0.0",
-    "react-dom": "^17.0.0 || ^18.0.0"
+    "react": "^17.0.0 || ^18.0.0 || ^19.0.0",
+    "react-dom": "^17.0.0 || ^18.0.0 || ^19.0.0"
   },
   "devDependencies": {
-    "@types/node": "^24.3.0",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
     "typescript": "^5.0.0"
+  },
+  "files": [
+    "dist",
+    "README.md"
+  ],
+  "publishConfig": {
+    "access": "public"
   }
 }
